--- a/runner/Resources/images/sprites/subparts.plist
+++ b/runner/Resources/images/sprites/subparts.plist
@@ -4,10 +4,23 @@
     <dict>
         <key>frames</key>
         <dict>
+            <key>header_coin.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{3,3},{138,54}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{138,54}}</string>
+                <key>sourceSize</key>
+                <string>{138,54}</string>
+            </dict>
             <key>selector.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{3,3},{20,29}}</string>
+                <string>{{145,3},{20,29}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -20,7 +33,7 @@
             <key>title_btn.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{27,3},{1,1}}</string>
+                <string>{{169,3},{1,1}}</string>
                 <key>offset</key>
                 <string>{-159.5,43.5}</string>
                 <key>rotated</key>
@@ -38,9 +51,9 @@
             <key>realTextureFileName</key>
             <string>subparts.png</string>
             <key>size</key>
-            <string>{32,64}</string>
+            <string>{256,64}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:4c0a2c3e71c32757c40647a9fedda569$</string>
+            <string>$TexturePacker:SmartUpdate:3548810af4b64524c7e971d362f9bd09$</string>
             <key>textureFileName</key>
             <string>subparts.png</string>
         </dict>
