--- a/runner/Resources/images/sprites/block.plist
+++ b/runner/Resources/images/sprites/block.plist
@@ -30,6 +30,19 @@
                 <key>sourceSize</key>
                 <string>{64,64}</string>
             </dict>
+            <key>block2.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{1355,3},{320,200}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{320,200}}</string>
+                <key>sourceSize</key>
+                <string>{320,200}</string>
+            </dict>
         </dict>
         <key>metadata</key>
         <dict>
@@ -40,7 +53,7 @@
             <key>size</key>
             <string>{2048,256}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:30b2998acc9887b845ff3970d748e232$</string>
+            <string>$TexturePacker:SmartUpdate:4b412268ddb382ee20b19b458465a19a$</string>
             <key>textureFileName</key>
             <string>block.png</string>
         </dict>
