--- a/runner/Resources/images/sprites/monster.plist
+++ b/runner/Resources/images/sprites/monster.plist
@@ -121,6 +121,84 @@
                 <key>sourceSize</key>
                 <string>{63,39}</string>
             </dict>
+            <key>monster4_right1.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{3,159},{66,78}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{66,78}}</string>
+                <key>sourceSize</key>
+                <string>{66,78}</string>
+            </dict>
+            <key>monster4_right2.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{73,159},{66,76}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{66,76}}</string>
+                <key>sourceSize</key>
+                <string>{66,76}</string>
+            </dict>
+            <key>monster4_right3.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{143,159},{66,78}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{66,78}}</string>
+                <key>sourceSize</key>
+                <string>{66,78}</string>
+            </dict>
+            <key>monster5_right1.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{3,241},{74,75}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{74,75}}</string>
+                <key>sourceSize</key>
+                <string>{74,75}</string>
+            </dict>
+            <key>monster5_right2.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{81,241},{74,73}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{74,73}}</string>
+                <key>sourceSize</key>
+                <string>{74,73}</string>
+            </dict>
+            <key>monster5_right3.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{159,241},{74,70}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{74,70}}</string>
+                <key>sourceSize</key>
+                <string>{74,70}</string>
+            </dict>
         </dict>
         <key>metadata</key>
         <dict>
@@ -129,9 +207,9 @@
             <key>realTextureFileName</key>
             <string>monster.png</string>
             <key>size</key>
-            <string>{256,256}</string>
+            <string>{256,512}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:e33dd1d6051fc4602cdaf85b6bbde3f0$</string>
+            <string>$TexturePacker:SmartUpdate:19a2a182116566b5174a659e82947ef4$</string>
             <key>textureFileName</key>
             <string>monster.png</string>
         </dict>
