--- a/runner/Resources/images/sprites/header.plist
+++ b/runner/Resources/images/sprites/header.plist
@@ -30,10 +30,23 @@
                 <key>sourceSize</key>
                 <string>{178,40}</string>
             </dict>
+            <key>play_btn.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{327,3},{106,108}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{106,108}}</string>
+                <key>sourceSize</key>
+                <string>{106,108}</string>
+            </dict>
             <key>speed_up.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{3,61},{282,58}}</string>
+                <string>{{3,115},{282,58}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -43,6 +56,19 @@
                 <key>sourceSize</key>
                 <string>{282,58}</string>
             </dict>
+            <key>stop_btn.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{289,115},{106,108}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{106,108}}</string>
+                <key>sourceSize</key>
+                <string>{106,108}</string>
+            </dict>
         </dict>
         <key>metadata</key>
         <dict>
@@ -51,9 +77,9 @@
             <key>realTextureFileName</key>
             <string>header.png</string>
             <key>size</key>
-            <string>{512,128}</string>
+            <string>{512,256}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:f582b5fb5a7f6e9fe25ed1f0daa2faa1$</string>
+            <string>$TexturePacker:SmartUpdate:fd836b56487b9b2668619de2f12dc998$</string>
             <key>textureFileName</key>
             <string>header.png</string>
         </dict>
