--- a/runner/Resources/images/sprites/gameparts.plist
+++ b/runner/Resources/images/sprites/gameparts.plist
@@ -17,10 +17,36 @@
                 <key>sourceSize</key>
                 <string>{640,100}</string>
             </dict>
+            <key>block101.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{647,3},{80,80}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{80,80}}</string>
+                <key>sourceSize</key>
+                <string>{80,80}</string>
+            </dict>
+            <key>block201.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{731,3},{160,80}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{10,0},{160,80}}</string>
+                <key>sourceSize</key>
+                <string>{180,80}</string>
+            </dict>
             <key>coin1.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{647,3},{30,49}}</string>
+                <string>{{895,3},{30,49}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -33,7 +59,7 @@
             <key>coin2.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{681,3},{30,49}}</string>
+                <string>{{929,3},{30,49}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -43,6 +69,45 @@
                 <key>sourceSize</key>
                 <string>{30,49}</string>
             </dict>
+            <key>hatena1.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{3,107},{80,80}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{80,80}}</string>
+                <key>sourceSize</key>
+                <string>{80,80}</string>
+            </dict>
+            <key>hatena2.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{87,107},{80,80}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{80,80}}</string>
+                <key>sourceSize</key>
+                <string>{80,80}</string>
+            </dict>
+            <key>pipe1.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{171,107},{180,80}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{180,80}}</string>
+                <key>sourceSize</key>
+                <string>{180,80}</string>
+            </dict>
         </dict>
         <key>metadata</key>
         <dict>
@@ -51,9 +116,9 @@
             <key>realTextureFileName</key>
             <string>gameparts.png</string>
             <key>size</key>
-            <string>{1024,128}</string>
+            <string>{1024,256}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:423c9c28a534c8a94f4e101276af6f90$</string>
+            <string>$TexturePacker:SmartUpdate:d4f89ff480c2860d1391b8d0bb831ce4$</string>
             <key>textureFileName</key>
             <string>gameparts.png</string>
         </dict>
