リトライボタンを追加

--- a/runner/Resources/images/sprites/hud.plist
+++ b/runner/Resources/images/sprites/hud.plist
@@ -4,10 +4,49 @@
     <dict>
         <key>frames</key>
         <dict>
+            <key>base_window.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{3,3},{540,538}}</string>
+                <key>offset</key>
+                <string>{0,-5}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{15,21},{540,538}}</string>
+                <key>sourceSize</key>
+                <string>{570,570}</string>
+            </dict>
+            <key>black.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{3,545},{640,960}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{640,960}}</string>
+                <key>sourceSize</key>
+                <string>{640,960}</string>
+            </dict>
+            <key>btn_next.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{3,1509},{432,70}}</string>
+                <key>offset</key>
+                <string>{-1,1}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{8,1},{432,70}}</string>
+                <key>sourceSize</key>
+                <string>{450,74}</string>
+            </dict>
             <key>coin_base.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{3,3},{138,54}}</string>
+                <string>{{439,1509},{138,54}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -20,7 +59,7 @@
             <key>coin_bonus.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{145,3},{178,40}}</string>
+                <string>{{581,1509},{178,40}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -33,7 +72,7 @@
             <key>play_btn.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{327,3},{66,68}}</string>
+                <string>{{763,1509},{66,68}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -46,7 +85,7 @@
             <key>speed_up.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{3,75},{282,58}}</string>
+                <string>{{3,1583},{282,58}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -59,7 +98,7 @@
             <key>stop_btn.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{289,75},{66,68}}</string>
+                <string>{{289,1583},{66,68}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -77,9 +116,9 @@
             <key>realTextureFileName</key>
             <string>hud.png</string>
             <key>size</key>
-            <string>{512,256}</string>
+            <string>{1024,2048}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:77aa4bc08a2a6d01e52c4e00e785c9c8$</string>
+            <string>$TexturePacker:SmartUpdate:64dae0bc21c0a93214a9398ef5891cc4$</string>
             <key>textureFileName</key>
             <string>hud.png</string>
         </dict>
